--- a/greeting-service/src/main/resources/application.yml
+++ b/greeting-service/src/main/resources/application.yml
@@ -1,13 +1,19 @@
+server:
+  port: 8080
 spring:
   application:
     name: greeting-service
+  config:
+    import: optional:configserver:http://localhost:8888/
+  cloud:
+    config:
+      profile: dev
 management:
   endpoints:
     web:
       exposure:
         include:
           - '*'
-
 greeting-service:
-  greeting: "Hola"
-  default-value: "Mondo"
+  greeting: "Olá"
+  default-value: "Mundo"
