--- a/greeting-service/src/main/resources/application.yml
+++ b/greeting-service/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 server:
   port: 8080
+
 spring:
   application:
     name: greeting-service
@@ -15,5 +16,5 @@ management:
         include:
           - '*'
 greeting-service:
-  greeting: "Olá"
+  greeting: "Ola"
   default-value: "Mundo"
