--- a/cambio-service/src/main/resources/application.yml
+++ b/cambio-service/src/main/resources/application.yml
@@ -5,17 +5,21 @@ spring:
     name: cambio-service
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://localhost:5432/cambio_db
+    url: jdbc:postgresql://127.0.0.1:5432/cambio_db
     username: postgres
     password: postgres066252
+  jackson:
+    default-property-inclusion: NON_NULL
+    serialization:
+      fail_on_empty_beans: false
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQL81Dialect
+        dialect: org.hibernate.dialect.PostgreSQL95Dialect
   flyway:
-    url: jdbc:postgresql://localhost:5432/cambio_db
+    url: jdbc:postgresql://127.0.0.1:5432/cambio_db
     user: postgres
     password: postgres066252
