--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/
+      default-zone: http://localhost:8761/eureka
 resilience4j:
   bulkhead:
     instances:
