--- a/cambio-service/src/main/resources/application.yml
+++ b/cambio-service/src/main/resources/application.yml
@@ -3,13 +3,13 @@ server:
 eureka:
   client:
     service-url:
-      default-zone: http://localhost:8761/
+      default-zone: http://localhost:8761/eureka
 spring:
   application:
     name: cambio-service
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://127.0.0.1:5432/cambio_db
+    url: jdbc:postgresql://localhost:5432/cambio_db
     username: postgres
     password: postgres066252
   jackson:
@@ -24,7 +24,7 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQL95Dialect
   flyway:
-    url: jdbc:postgresql://127.0.0.1:5432/cambio_db
+    url: jdbc:postgresql://localhost:5432/cambio_db
     user: postgres
     password: postgres066252
 springdoc:
