--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,15 @@
 version: '3.4'
 services:
-
+# ************ ZIPKIN ************
+#  zipkin-server:
+#    image:
+#      openzipkin/zipkin:2.23.2
+#    ports:
+#      - 9411:9411
+#    networks:
+#      - microservice-network
 # ************ DATABASES ************
-  book-db:
+  book-db: 
     image: postgres
     restart: "always"
     environment:
@@ -15,7 +22,7 @@ services:
     #  - app-volumne:/var/lib/postgresql/data
     networks:
       - microservice-network
-  cambio-db:
+  cambio-db: 
     image: postgres
     restart: "always"
     environment:
@@ -24,14 +31,16 @@ services:
         POSTGRES_DB: cambiodb
     ports:
       - "5435:5432"
+    expose:
+      - 5435
     #volumes:
     #  - app-volumne:/var/lib/postgresql/data
     networks:
       - microservice-network
-# ************ SERVICES ************
-# ************ Book service ************
-  naming-service:
-    image: naming-service:latest
+
+# ************ SERVERS ************
+  naming-server:
+    image: naming-server:latest
     build:
       context: naming-server
       dockerfile: Dockerfile
@@ -45,6 +54,11 @@ services:
     build:
       context: api-gateway
       dockerfile: Dockerfile
+    depends_on:
+      - naming-server
+    environment:
+      EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
+#      SPRING.ZIPKIN.BASEURL: http://zipking-server:9411/
     ports:
       - 8765:8765
     networks:
@@ -55,8 +69,15 @@ services:
     build:
       context: cambio-service
       dockerfile: Dockerfile
+    depends_on:
+      - cambio-db
+      - naming-server
     ports:
       - 8000:8000
+    environment:
+      - eureka.client.serviceUrl.defaultZone=http://naming-server:8761/eureka
+      - spring.datasource.url=jdbc:postgresql://cambio-db:5432/cambiodb
+      - spring.flyway.url=jdbc:postgresql://cambio-db:5432/cambiodb
     networks:
       - microservice-network
 
@@ -65,8 +86,15 @@ services:
     build:
       context: book-service
       dockerfile: Dockerfile
+    depends_on:
+      - book-db
+      - naming-server
     ports:
       - 8100:8100
+    environment:
+      - eureka.client.serviceUrl.defaultZone=http://naming-server:8761/eureka
+      - spring.datasource.url=jdbc:postgresql://book-db:5432/bookdb
+      - spring.flyway.url=jdbc:postgresql://book-db:5432/bookdb
     networks:
       - microservice-network
 
@@ -74,4 +102,4 @@ networks:
   microservice-network:
     driver: bridge
 volumes:
-  app-volumne: #
+  app-volume: #
