--- a/book-service/src/main/resources/application.yml
+++ b/book-service/src/main/resources/application.yml
@@ -39,6 +39,9 @@ spring:
     url: jdbc:postgresql://localhost:5432/book_db
     user: postgres
     password: postgres066252
+  sleuth:
+    sampler:
+      probability: 1.0
 springdoc:
   show-actuator: true
   api-docs:
