--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: '3.4'
 services:
 # ************ ZIPKIN ************
-#  zipkin-server:
-#    image:
-#      openzipkin/zipkin:2.23.2
-#    ports:
-#      - 9411:9411
-#    networks:
-#      - microservice-network
+  zipkin-server:
+    image: openzipkin/zipkin
+    ports:
+      - 9411:9411
+    networks:
+     - microservice-network
+
 # ************ DATABASES ************
   book-db: 
     image: postgres
@@ -58,7 +58,7 @@ services:
       - naming-server
     environment:
       EUREKA.CLIENT.SERVICEURL.DEFAULTZONE: http://naming-server:8761/eureka
-#      SPRING.ZIPKIN.BASEURL: http://zipking-server:9411/
+      SPRING.ZIPKIN.BASEURL: http://zipking-server:9411/
     ports:
       - 8765:8765
     networks:
@@ -78,6 +78,7 @@ services:
       - eureka.client.serviceUrl.defaultZone=http://naming-server:8761/eureka
       - spring.datasource.url=jdbc:postgresql://cambio-db:5432/cambiodb
       - spring.flyway.url=jdbc:postgresql://cambio-db:5432/cambiodb
+      - spring.zipkin.baseUrl=http://zipkin-server:9411/
     networks:
       - microservice-network
 
@@ -95,6 +96,7 @@ services:
       - eureka.client.serviceUrl.defaultZone=http://naming-server:8761/eureka
       - spring.datasource.url=jdbc:postgresql://book-db:5432/bookdb
       - spring.flyway.url=jdbc:postgresql://book-db:5432/bookdb
+      - spring.zipkin.baseUrl=http://zipkin-server:9411/
     networks:
       - microservice-network
 
