--- a/eureka-docker-compose.yml
+++ b/eureka-docker-compose.yml
@@ -1,7 +1,15 @@
 version: '3.4'
 services:
+# ************ ZIPKIN ************
+  zipkin-server:
+    image: openzipkin/zipkin
+    ports:
+      - 9411:9411
+    networks:
+     - microservice-network
 
 # ************ SERVERS ************
+
   naming-server:
     image: naming-server
     build:
