--- a/cambio-service/src/main/resources/application.yml
+++ b/cambio-service/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 server:
   port: 8000
-eureka:
-  client:
-    service-url:
-      default-zone: http://localhost:8761/eureka
+  error:
+    include-message: always
+    include-exception: false
+#eureka:
+#  client:
+#    service-url:
+#      default-zone: http://localhost:8761/eureka
 spring:
   application:
     name: cambio-service
@@ -15,7 +18,7 @@ spring:
   jackson:
     default-property-inclusion: NON_NULL
     serialization:
-      fail_on_empty_beans: false
+      fail-on-empty-beans: false
   jpa:
     hibernate:
       ddl-auto: update
@@ -30,7 +33,7 @@ spring:
   sleuth:
     sampler:
       probability: 1.0
-springdoc:
-  show-actuator: false
-  api-docs:
-    path: cambio-service/v3/api-docs
+#springdoc:
+#  show-actuator: false
+#  api-docs:
+#    path: cambio-service/v3/api-docs
